--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,32 +1,95 @@
 <mat-toolbar>
-  <button
-    mat-icon-button
-    class="toolbar-icon"
-    aria-label="icon-button with home icon"
-  >
-    <mat-icon>cottage</mat-icon>
-  </button>
+  <!-- space placeholder toolbar row -->
+  <mat-toolbar-row class="mat-toolbar-placeholder"></mat-toolbar-row>
 
-  <span>{{ title }}</span>
-  <span class="example-spacer"></span>
+  <mat-toolbar-row>
+    <mat-tooltip-component></mat-tooltip-component>
+    <mat-tooltip-component></mat-tooltip-component>
 
-  <!-- github -->
-  <button mat-icon-button class="toolbar-icon github-icon" (click)="goToLink(personalGithubUrl)">
-    <mat-icon svgIcon="github-dark" aria-hidden="false"></mat-icon>
-  </button>
-  <!-- linkedin -->
-  <button mat-icon-button class="toolbar-icon linkedin-icon" (click)="goToLink(personalLinkedinUrl)">
-    <mat-icon svgIcon="linkedin-dark" aria-hidden="false"></mat-icon>
-  </button>
-  <!-- xing -->
-  <button mat-icon-button class="toolbar-icon xing-icon" (click)="goToLink(personalXingUrl)">
-    <mat-icon svgIcon="xing-dark" aria-hidden="false"></mat-icon>
-  </button>
+    <!-- home button -->
+    <button
+      mat-fab
+      color="primary"
+      class="toolbar-icon"
+      matTooltip="welcome page"
+    >
+      <mat-icon>cottage</mat-icon>
+    </button>
 
-  <!-- doit - open rectangle with personal homepage to share -->
-  <button color="accent" mat-icon-button class="toolbar-icon share-icon">
-    <mat-icon>share</mat-icon>
-  </button>
+    <!-- doit route to starting page -->
+    <mat-tooltip-component></mat-tooltip-component>
+    <mat-tooltip-component></mat-tooltip-component>
+    <span class="fancy-title">Page of Andjelko</span>
+    <span class="spacer"></span>
 
-  <mat-tooltip-component></mat-tooltip-component>
+    <!-- github -->
+    <button
+      mat-icon-button
+      class="toolbar-icon github-icon"
+      matTooltip="github profile"
+      (click)="goToLinkWithNewTab(myPersonalUrls.github)"
+    >
+      <mat-icon svgIcon="github-dark" aria-hidden="false"></mat-icon>
+    </button>
+
+    <!-- linkedin -->
+    <button
+      mat-icon-button
+      class="toolbar-icon linkedin-icon"
+      matTooltip="linked profile"
+      (click)="goToLinkWithNewTab(myPersonalUrls.linkedin)"
+    >
+      <mat-icon svgIcon="linkedin-dark" aria-hidden="false"></mat-icon>
+    </button>
+
+    <!-- xing -->
+    <button
+      mat-icon-button
+      class="toolbar-icon xing-icon"
+      matTooltip="xing profile"
+      (click)="goToLinkWithNewTab(myPersonalUrls.xing)"
+    >
+      <mat-icon svgIcon="xing-dark" aria-hidden="false"></mat-icon>
+    </button>
+
+    <!-- doit - open new card -> share on twitter/facebook/copyLink? -->
+    <!-- share -->
+    <button
+      color="accent"
+      mat-icon-button
+      class="toolbar-icon share-icon"
+      #tooltip="matTooltip"
+      matTooltip="share this website"
+      [cdkCopyToClipboard]="myPersonalUrls.homepage"
+      (click)="showCopiedInfo()"
+    >
+      <mat-icon>share</mat-icon>
+    </button>
+
+    <mat-tooltip-component></mat-tooltip-component>
+  </mat-toolbar-row>
+
+  <!-- space placeholder toolbar row -->
+  <mat-toolbar-row class="mat-toolbar-placeholder"></mat-toolbar-row>
 </mat-toolbar>
+
+<!--<mat-grid-list cols="3" rowHeight="2:1">-->
+<!--  <mat-grid-tile>1</mat-grid-tile>-->
+<!--  <mat-grid-tile>2</mat-grid-tile>-->
+<!--  <mat-grid-tile>3</mat-grid-tile>-->
+<!--</mat-grid-list>-->
+
+<!-- doit refactor to component appropriately & tooltip for tabs & nice icons!!-->
+<!-- https://material.angular.io/components/tabs/examples -->
+<!-- doit lazy loading?-->
+<mat-tab-group mat-align-tabs="center" animationDuration="1500ms" dynamicHeight>
+  <mat-tab label="About me">
+    <div class="example-small-box mat-elevation-z4">Small content</div></mat-tab
+  >
+  <mat-tab disabled label="">disabled</mat-tab>
+  <mat-tab label="Work experience"> Content 2 </mat-tab>
+  <mat-tab disabled label="">disabled</mat-tab>
+  <mat-tab label="Current Techstack">
+    <div class="example-large-box mat-elevation-z4">Large content</div>
+  </mat-tab>
+</mat-tab-group>
