--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -70,7 +70,7 @@
           <span>share on facebook</span>
         </button>
         <!-- twitter -->
-        <button mat-menu-item (click)="prePopulateTwitterMessage()">
+        <button mat-menu-item (click)="goToLinkWithNewTab(prePopulateTwitterMessage())">
           <mat-icon class="twitter-icon" svgIcon="twitter-dark"
             >twitter</mat-icon
           >
