stackoverflow icon added

--- a/src/app/tab-overview/tab-overview.component.html
+++ b/src/app/tab-overview/tab-overview.component.html
@@ -3,14 +3,15 @@
 <!-- doit lazy loading?-->
 <mat-tab-group mat-align-tabs="center" animationDuration="1500ms" dynamicHeight>
 
+  <mat-tab label="My blog"> TODO Cards for blog posts - code snippets necessary! </mat-tab>
+  <mat-tab disabled label="">disabled</mat-tab>
+
   <mat-tab label="About me">
     <app-landing-page></app-landing-page>
   </mat-tab>
-
   <mat-tab disabled label="">disabled</mat-tab>
 
   <mat-tab label="Work experience"> TODO Details with expansion panel, contained by a fancy component </mat-tab>
-
   <mat-tab disabled label="">disabled</mat-tab>
 
   <mat-tab label="Current tech stack"> TODO tech stack as Chips/Lists with Icons and company name (fancy) </mat-tab>
