--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -31,6 +31,16 @@
       <mat-icon svgIcon="github-dark" aria-hidden="false"></mat-icon>
     </button>
 
+    <!-- stack overflow -->
+    <button
+      mat-icon-button
+      class="toolbar-icon stackoverflow-icon"
+      matTooltip="stackoverflow profile"
+      (click)="goToLinkWithNewTab(myPersonalUrls.stackoverflow)"
+    >
+      <mat-icon svgIcon="stackoverflow-dark" aria-hidden="false"></mat-icon>
+    </button>
+
     <!-- linkedin -->
     <button
       mat-icon-button
