exploring layout options

--- a/src/app/tab-overview/tab-overview.component.html
+++ b/src/app/tab-overview/tab-overview.component.html
@@ -7,7 +7,7 @@
   <mat-tab disabled label="">disabled</mat-tab>
 
   <mat-tab label="About me">
-    <app-landing-page></app-landing-page>
+    <app-about-me></app-about-me>
   </mat-tab>
   <mat-tab disabled label="">disabled</mat-tab>
 
