--- a/src/app/tab-overview/tab-overview.component.html
+++ b/src/app/tab-overview/tab-overview.component.html
@@ -11,7 +11,9 @@
   </mat-tab>
   <mat-tab disabled label="">disabled</mat-tab>
 
-  <mat-tab label="Work experience"> TODO Details with expansion panel, contained by a fancy component </mat-tab>
+  <mat-tab label="Work experience">
+    <app-work-experience></app-work-experience>
+  </mat-tab>
   <mat-tab disabled label="">disabled</mat-tab>
 
   <mat-tab label="Current tech stack"> TODO tech stack as Chips/Lists with Icons and company name (fancy) </mat-tab>
