--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,7 +5,7 @@
     [rowspan]="tile.rows"
     [style.background]="tile.color"
   >
-    <mat-card class="my-card">
+    <mat-card>
       <mat-card-title>Title</mat-card-title>
       <mat-card-subtitle>Sub-Title</mat-card-subtitle>
       <mat-card-content>
