--- a/src/app/work-experience/work-experience.component.css
+++ b/src/app/work-experience/work-experience.component.css
@@ -1,3 +1,12 @@
 .mat-grid-tile {
   background: floralwhite;
 }
+
+table {
+  width: 75%;
+  alignment: center;
+}
+
+.work-detail {
+  color: black;
+}
