--- a/src/app/work-experience/work-experience.component.css
+++ b/src/app/work-experience/work-experience.component.css
@@ -1,12 +1,20 @@
-.mat-grid-tile {
-  background: floralwhite;
+
+
+.headers-align .mat-expansion-panel-header-title,
+.headers-align .mat-expansion-panel-header-description {
+  flex-basis: 0;
 }
 
-table {
-  width: 75%;
-  alignment: center;
+.headers-align .mat-expansion-panel-header-description {
+  justify-content: space-between;
+  align-items: center;
 }
 
-.work-detail {
-  color: black;
+.headers-align .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.mat-accordion .mat-expansion-panel:not(.mat-expanded),
+.mat-accordion .mat-expansion-panel:not(.mat-expansion-panel-spacing) {
+  margin-bottom: 15px;
 }
